examples/test/testpolicy12789.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12789
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key42: value37
      key23: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value0
      podSelector:
        matchLabels:
          key4: value2
          key37: value42
